# DataTableViewer

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  NOTICE  README.md  vcpkg.json
src/: test.cpp
src/core/: itable_parser.h  parser_registry.cpp  parser_registry.h  table_data.h  type_inferrer.cpp  type_inferrer.h
src/parsers/: csv_parser.cpp  csv_parser.h  sqlite_parser.cpp  sqlite_parser.h
src/ui/: data_table_viewer.cpp  data_table_viewer.h  search_bar.cpp  search_bar.h  status_bar.cpp  status_bar.h  style_assets.h  table_filter_proxy.cpp  table_filter_proxy.h  table_model.cpp  table_model.h  table_picker.cpp  table_picker.h  table_renderer.cpp  table_renderer.h
src/workers/: table_worker.cpp  table_worker.h
tests/: test_csv_parser.cpp  test_sqlite_parser.cpp  test_table_model.cpp  test_type_inferrer.cpp
tests/fixtures/: broken_quotes.csv  complex_test.db  valid_basic.csv  valid_complex.csv  valid_diverse.tsv
